data/derived/fa15/progs/unify/prog2691.ml.out
Characters 46-47:
  | VarX -> 1 *. x
            ^
Error: This expression has type int but an expression was expected of type
         float
